<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schoolerc.ddcompanion.CharacterDetailsFragment">


    <TextView
        android:text="@string/placeholder_char_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/characterNameTextView"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/AppTheme.CharSheet.PrimaryHeading"
        app:layout_constraintRight_toLeftOf="@+id/guidelineVerticalMidline" />
    <TextView
        android:text="@string/placeholder_character_class_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewClassLevel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/characterNameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAppearance="@style/AppTheme.CharSheet.SecondaryHeading"
        app:layout_constraintRight_toLeftOf="@id/guidelineVerticalMidline" />
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineVerticalMidline"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="451dp"
        app:layout_constraintGuide_end="450dp" />
    <TextView
        android:text="@string/heading_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHeadingStats"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMidline"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_marginTop="8dp"
        android:textSize="24sp" />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/black"
        android:id="@+id/viewStatsHeadingSeparator"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMidline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadingStats" />
    <TextView
        android:text="@string/label_hit_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewHitPointsLabel"
        app:layout_constraintLeft_toLeftOf="@id/characterNameTextView"
        app:layout_constraintRight_toRightOf="@id/characterNameTextView"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewClassLevel"
        android:textAppearance="@style/AppTheme.CharSheet.FreeLabel"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.5" />
    <TextView
        android:id="@+id/textViewHitPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/placeholder_hit_points"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@id/textViewHitPointsLabel"
        app:layout_constraintRight_toRightOf="@id/textViewHitPointsLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewHitPointsLabel" />
    <TextView
        android:text="@string/heading_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilityScoreHeading"
        app:layout_constraintTop_toBottomOf="@id/viewStatsHeadingSeparator"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthScore"
        android:layout_marginTop="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilityBonusHeading"
        android:text="@string/heading_bonus"
        app:layout_constraintTop_toBottomOf="@id/viewStatsHeadingSeparator"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"
        android:layout_marginTop="8dp" />
    <TextView
        android:text="@string/heading_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbilitySaveHeading"
        app:layout_constraintTop_toBottomOf="@+id/viewStatsHeadingSeparator"
        app:layout_constraintLeft_toLeftOf="@+id/textViewStrengthSave"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthScore"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAbilityScoreHeading"
        app:layout_constraintRight_toRightOf="parent" />
    <TextView
        android:text="@string/label_stat_strength"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:id="@+id/textViewStrengthLabel"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/material_grey_400"
        app:layout_constraintTop_toBottomOf="@id/textViewAbilityScoreHeading"
        app:layout_constraintLeft_toRightOf="@id/textViewStrengthSave"
        app:layout_constraintRight_toLeftOf="@id/textViewStrengthScore" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewAbilityBonusHeading"
        app:layout_constraintLeft_toRightOf="@id/guidelineVerticalMidline"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewStrengthSave"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewAbilitySaveHeading"
        app:layout_constraintLeft_toRightOf="@id/textViewStrengthBonus" />
    <TextView
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewDexterityScore"
        style="@style/AppTheme.CharSheet.ValueView"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthScore"
        app:layout_constraintTop_toBottomOf="@id/textViewStrengthScore" />
    <TextView
        android:id="@+id/textViewDexteritySave"
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        app:layout_constraintTop_toBottomOf="@id/textViewStrengthSave"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthSave" />
    <TextView
        android:id="@+id/textViewDexterityBonus"
        style="@style/AppTheme.CharSheet.ValueView"
        android:layout_marginEnd="8dp"
        android:text="@string/placeholder_zero"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewStrengthBonus" />
    <TextView
        android:id="@+id/textViewDexterityLabel"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:background="@color/material_grey_500"
        android:text="@string/label_stat_dexterity"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthLabel"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewStrengthLabel" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionScore"
        app:layout_constraintTop_toBottomOf="@id/textViewDexterityScore"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthScore"/>
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionSave"
        app:layout_constraintTop_toBottomOf="@id/textViewDexteritySave"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthSave" />
    <TextView
        android:text="@string/placeholder_zero"
        style="@style/AppTheme.CharSheet.ValueView"
        android:id="@+id/textViewConstitutionBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewDexterityBonus"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"
        />
    <TextView
        android:text="@string/label_stat_constitution"
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:id="@+id/textViewConstitutionLabel"
        android:background="@color/material_grey_400"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewDexterityLabel"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthLabel" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceScore"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthScore"
        app:layout_constraintTop_toBottomOf="@id/textViewConstitutionScore"
        />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceSave"
        app:layout_constraintTop_toBottomOf="@id/textViewConstitutionSave"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthSave"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewIntelligenceBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewConstitutionBonus"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_intelligence"
        android:id="@+id/textViewIntelligenceLabel"
        android:background="@color/material_grey_500"
        app:layout_constraintTop_toBottomOf="@id/textViewConstitutionLabel"
        app:layout_constraintLeft_toLeftOf="@id/textViewConstitutionLabel"
        app:layout_constraintRight_toRightOf="@id/textViewConstitutionLabel"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomScore"
        app:layout_constraintTop_toBottomOf="@id/textViewIntelligenceScore"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthScore"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomSave"
        app:layout_constraintTop_toBottomOf="@id/textViewIntelligenceSave"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthSave"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewWisdomBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewIntelligenceBonus"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_wisdom"
        android:id="@+id/textViewWisdomLabel"
        android:background="@color/material_grey_400"
        app:layout_constraintTop_toBottomOf="@id/textViewIntelligenceLabel"
        app:layout_constraintRight_toRightOf="@id/textViewIntelligenceLabel"
        app:layout_constraintLeft_toLeftOf="@id/textViewIntelligenceLabel" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaScore"
        app:layout_constraintTop_toBottomOf="@id/textViewWisdomScore"
        app:layout_constraintRight_toRightOf="@id/textViewStrengthScore"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaSave"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthSave"
        app:layout_constraintTop_toBottomOf="@id/textViewWisdomSave" />
    <TextView
        style="@style/AppTheme.CharSheet.ValueView"
        android:text="@string/placeholder_zero"
        android:id="@+id/textViewCharismaBonus"
        app:layout_constraintLeft_toLeftOf="@id/textViewStrengthBonus"
        app:layout_constraintTop_toBottomOf="@id/textViewWisdomBonus"/>
    <TextView
        style="@style/AppTheme.CharSheet.ValueLabel"
        android:text="@string/label_stat_charisma"
        android:id="@+id/textViewCharismaLabel"
        android:background="@color/material_grey_500"
        app:layout_constraintLeft_toLeftOf="@id/textViewWisdomLabel"
        app:layout_constraintRight_toRightOf="@id/textViewWisdomLabel"
        app:layout_constraintTop_toBottomOf="@id/textViewWisdomLabel"/>

    <TextView
        android:id="@+id/textViewHeadingSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/heading_skills"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMidline"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewCharismaBonus" />
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadingSkills"
        app:layout_constraintLeft_toRightOf="@id/guidelineVerticalMidline"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"/>



</android.support.constraint.ConstraintLayout>
